# Hamburg-Haskell-Meetup-24-June-15

./: Main.hs  README.md  Typeclassopedia.hs  index.html  typeclassopedia.cabal
slides/: index.html  typeclassopedia.html
