name:                typeclassopedia
version:             0.1.0.0
author:              Moritz Drexl
maintainer:          mdrexl@fastmail.fm
build-type:          Simple
cabal-version:       >=1.10

executable typeclassopedia
  main-is:             Main.hs
  build-depends:       base
  default-language:    Haskell2010
